# ml_writing_helper

./: .gitignore  LICENSE  ReadMe.md  TODO.md  TODO_Tips.md  __init__.py  anaconda.yaml  build_nuitka.py  pyproject.toml  requirements.txt  setup.py  watcher_pptx2pdf.py
.github/workflow/: setup_pkg.yml
.github/workflows/: build.yml
JOSS/: .gitignore  paper.bib  paper.md  run_docker.sh  start_watcher.py
doc/: Design.md
ml_writing_helper/: __init__.py  format_input.py  img_crop.py  logger_getter.py  main.py
obsolute/: anaconda.yaml  pyproject.toml  setup.py
sample/: batch.py  batch_odp.py  batch_odp2pdf.py  batch_odp2png.py  batch_pptx2eps.py  mon_func.py  monitoring_all-imgs2eps.py  monitoring_all-imgs2pdf.py  monitoring_all_imgs.py  monitoring_bib.py  monitoring_multi1.py  monitoring_very_simple.py  start_watcher.py  test_cli.sh  test_copy_when_copied2src.py  test_covert2eps_when_copied2src.py  test_mmd.sh  try_conv_puml.py
sample/fig_gen/: pptx1.eps
sample/fig_sample/: test.puml  test_pu.pu
sample/fig_src/: pptx1.pptx  test.pptx
sandbox/: sample.tex  start_watcher.py
src/: __init__.py  core.py  format_input.py  img_crop.py  logger_getter.py  main.py  path4img.py  watcher_pptx2pdf.py
src/fig_src/: test_mermaid.mmd
src/ml_writing_helper/: __init__.py  conv_img.py  dat_cls.py  enum_cls.py  extension.py  img_crop.py  main.py  output_ext.py  tool.py  util.py
src/ml_writing_helper/converter/: slide_img_converter.py
src/ml_writing_helper/debug_candidate/: arg_parser.py
src/ml_writing_helper/task_runner/: __init__.py  abc_runner.py  copy_runner.py  img_conv_runner.py
src/test/: test_monitor_fig_src_dir.py  test_plantml2img.py
src/trial/: try_pdf_crop.py
test/: test_all_img2eps.py  test_all_img2pdf.py  test_bib_copy.py  test_first_run_copy_bib.py  test_fix_eps.py  test_plantml2png.py  test_png2eps.py  try_all_img2eps.py  try_all_img2pdf.py  try_monitor_all-imgs2eps.py  try_monitor_all-imgs2pdf.py  try_sum_glob.py
test/fig_sample/: test_bib.bib  test_eps.eps  test_odp.odp
test_code/: repair_eps.py
test_code/auto_crop/: test_auto_crop.py
try/: auto_crop2.py  magic_try1.py  path4img.py  repair_eps.py  try_conv2eps-gray.py  try_conv2eps.py  try_gen_eps-bw.py
try/auto_crop/: test_auto_crop.py
try/fig_sample/: test_ppt.pptx
try2/: test_fix_eps.tex  try_fix_eps.py
