[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "pdfCropMargins",
    "loguru>=0.5.3",
    "Pillow>=8.2.0",
    "watchdog>=2.1.9",
    "pdf2image>=1.16.0",
    # "strenum>=0.4.8",
]
name = "ml_writing_helper"
version = "0.0.4"
description = "Helper tool to insert created diagrams to markup language such as LaTeX, Markdown and HTML and so on."
authors = [{ name = "Hirotsugu Minowa" }]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "click",
    "build",
    "pip-tools",
    "pytest = >=5.2",
    "pip-versions  >=0.1.0",
    "mypy = >0.960",
]

[project.scripts]
convert4ml = "ml_writing_helper.main:convert"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
